--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,137 @@
-body {
-  margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,400&family=Roboto+Slab:wght@300;400;700&display=swap');
+
+:root {
+  --bubble-gum-pink: #ff5ab7;
+  --black: #1e1e1e;
+  --pinkish-grey: #c7c7c7;
+  --very-light-pink: #c4c4c4;
+  --pale-grey: #f5f6fa;
+  --medium-blue: #307bbe;
+  --white: #fafafa;
+  --white-two: #fff;
+  --azure: #0290ff;
+  --black-5: rgba(0, 0, 0, 0.3);
 }
 
-.nav-container {
-  display: flex;
+.body {
+  box-sizing: border-box;
+}
 
-  /* justify-content: space-between; */
-  align-items: center;
-  padding: 0 20px;
-  gap: 20px;
-  background-color: #e0e2e7;
+.Text-Style {
+  font-family: RobotoSlab;
+  font-size: 0.813rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: var(--white-two);
+}
+
+.Text-Style-2 {
+  font-family: Montserrat;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.Text-Style-3 {
+  font-family: Montserrat;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--azure);
+}
+
+.Text-Style-4 {
+  font-family: RobotoSlab;
+  font-size: 1rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
+  color: #121212;
+}
+
+.Text-Style-5 {
+  font-family: RobotoSlab;
+  font-size: 1.375rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  color: #121212;
+}
+
+.Text-Style-6 {
+  font-family: Montserrat;
+  font-size: 0.813rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: #121212;
+}
+
+.Text-Style-7 {
+  font-family: RobotoSlab;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #121212;
+}
+
+.Text-Style-8 {
+  font-family: RobotoSlab;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+}
+
+.Text-Style-10 {
+  font-family: Montserrat;
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  color: #888;
+}
+
+.Text-Style-11 {
+  font-family: Montserrat;
+  font-size: 0.8rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  color: #888;
 }
 
 .nav-menu {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   list-style: none;
-  margin: 0;
-  padding: 0;
-  gap: 20px;
+  padding: 1.125rem;
 }
 
 .bookList {
@@ -55,18 +153,20 @@ body {
   flex-direction: column;
   gap: 10px;
   padding: 20px;
-  border: 1px solid #e0e2e7;
-  border-radius: 5px;
+  border: 1px solid #e8e8e8 ;
+  border-radius: 4px;
 }
 
 .bookItem {
   display: flex;
+  height: 10rem;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  padding: 10px;
-  border: 1px solid #e0e2e7;
+  padding: 1.6rem;
+  border: 1px solid #e8e8e8;
   border-radius: 5px;
+  margin-bottom: 1.2rem;
+  background-color: var(--white-two);
 }
 
 .bookItem-left {
@@ -76,19 +176,13 @@ body {
 
 .bookItem-right,
 .bookItem-middle {
-  color: #fdfeff;
+  display: flex;
+  align-items: center;
 }
 
-.title {
-  font-size: 20px;
-  font-weight: bold;
-  padding: 0;
-}
-
-.author {
-  font-size: 16px;
-  font-weight: normal;
-  padding: 0;
+.percent-cnt {
+  text-align: center;
+  padding-left: 1rem;
 }
 
 .removeBtn {
@@ -98,3 +192,204 @@ body {
   padding: 5px;
   cursor: pointer;
 }
+
+/* zeplin styles */
+.panel-app {
+  margin: 0 auto;
+  width: 87vw;
+  height: 87vh;
+  border-radius: 4px;
+  box-shadow: 30px 0 60px 0 var(--black-5);
+  background-color: var(--white);
+  overflow:auto;
+  scroll-behavior: smooth;
+}
+
+.panel-bg {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.6rem;
+  margin: 0;
+  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  background-color: var(--white-two);
+  border-bottom: solid 1px #e8e8e8;  
+}
+
+.Bookstore-CMS {
+  width: 15rem;
+  height: 2.313rem;
+  margin: 0.375rem 2.938rem 0.125rem 0;
+  font-family: Montserrat;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--azure);
+  cursor: pointer;
+}
+
+.BOOKS {
+  width: 3.688rem;
+  height: 1rem;
+  margin: 1.125rem 1.125rem 0.688rem 0;
+  font-family: Montserrat;
+  font-size: 0.813rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: #121212;
+  text-decoration: none;
+}
+
+.CATEGORIES {
+  width: 6.563rem;
+  height: 1rem;
+  margin: 1.125rem 1.125rem 0.688rem 2.563rem;
+  opacity: 0.5;
+  font-family: Montserrat;
+  font-size: 0.813rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: #121212;
+  text-decoration: none;
+}
+
+.oval {
+  display: flex;
+  width: 2.813rem;
+  height: 2.813rem;
+  border: solid 1px #e8e8e8;
+  border-radius: 50%;
+  background-color: var(--white);
+  cursor: pointer;
+}
+
+.user-icon {
+  margin: auto;
+  width: 1.68rem;
+  height: 1.68rem;
+  color: var(--azure);
+}
+
+.categorie {
+  padding-bottom: 0.5rem;
+}
+
+.author {
+  padding-bottom: 1.5rem;
+}
+
+.btn-container-book {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-book-item {
+  position: relative;
+  width: 5rem;
+  height: 1.5rem;
+  font-family: RobotoSlab;
+  font-size: 1rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  color: #4386bf;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: color 0.3s, transform 0.3s;
+}
+
+.btn-book-item::before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 10%;
+  width: 0;
+  height: 1px;
+  background-color: var(--azure);
+  transition: width 0.3s;
+}
+
+.btn-container-book .btn-book-item::after {
+  content: '';
+  position: absolute;
+  width: 0px;
+  height: 100%;
+  border: #e8e8e8 1px solid;
+  top: 0;
+  right: 0;
+}
+
+
+.btn-container-book .btn-book-item:last-child::after {
+  display: none;
+}
+
+.btn-container-book .btn-book-item:first-child {
+  padding-left: 0;
+}
+
+.btn-book-item:hover {
+  color: var(--azure);
+}
+
+.btn-book-item:hover::before {
+  width: 80%;
+}
+
+.progress-circle {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: lightgray;
+  overflow: hidden;
+}
+
+.progress-circle::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: linear-gradient(to left, var(--azure) 70%, lightgray 0);
+  transform-origin: left center;
+  transform: rotate(calc(360deg * var(--percent) / 100));
+  transition: transform 1.5s;
+}
+
+.progress-circle::after {
+  content: '';
+  position: absolute;
+  top: 8%;
+  left: 8%;
+  transform: translate(-50%, -50%);
+  width: 84%;
+  height: 84%;
+  border-radius: 50%;
+  background: var(--white-two);
+  transform-origin: left center;
+  transform: rotate(calc(360deg * var(--percent) / 100));
+  transition: transform 1.5s;
+}
+
+/* Adjust the value of --percent to change the progress */
+.progress-circle[data-percent="15"]::before {
+  transform: rotate(360deg);
+}
+
+
+
+
