--- a/src/index.css
+++ b/src/index.css
@@ -128,10 +128,73 @@
   color: #888;
 }
 
+/* zeplin styles */
+.panel-app {
+  margin: 0 auto;
+  width: 87vw;
+  height: 87vh;
+  border-radius: 4px;
+  box-shadow: 30px 0 60px 0 var(--black-5);
+  background-color: var(--white);
+  overflow: auto;
+  scroll-behavior: smooth;
+}
+
+.panel-bg {
+  display: flex;
+  align-items: center;
+  height: 2.6rem;
+  margin: 0;
+  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  background-color: var(--white-two);
+  border-bottom: solid 1px #e8e8e8;
+}
+
+.nav-header {
+  width: 30%;
+}
+
+.Bookstore-CMS {
+  height: 2.313rem;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--azure);
+  cursor: pointer;
+}
+
+.nav-menu-and-user {
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav-menu {
   display: flex;
   list-style: none;
   padding: 1.125rem;
+}
+
+.oval {
+  display: flex;
+  width: 2.813rem;
+  height: 2.813rem;
+  border: solid 1px #e8e8e8;
+  border-radius: 50%;
+  background-color: var(--white);
+  cursor: pointer;
+}
+
+.user-icon {
+  margin: auto;
+  width: 1.68rem;
+  height: 1.68rem;
+  color: var(--azure);
 }
 
 .bookList {
@@ -192,44 +255,6 @@
   cursor: pointer;
 }
 
-/* zeplin styles */
-.panel-app {
-  margin: 0 auto;
-  width: 87vw;
-  height: 87vh;
-  border-radius: 4px;
-  box-shadow: 30px 0 60px 0 var(--black-5);
-  background-color: var(--white);
-  overflow: auto;
-  scroll-behavior: smooth;
-}
-
-.panel-bg {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 2.6rem;
-  margin: 0;
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
-  background-color: var(--white-two);
-  border-bottom: solid 1px #e8e8e8;
-}
-
-.Bookstore-CMS {
-  width: 15rem;
-  height: 2.313rem;
-  margin: 0.375rem 2.938rem 0.125rem 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 1.875rem;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: var(--azure);
-  cursor: pointer;
-}
-
 .BOOKS {
   width: 3.688rem;
   height: 1rem;
@@ -259,23 +284,6 @@
   letter-spacing: 1.9px;
   color: #121212;
   text-decoration: none;
-}
-
-.oval {
-  display: flex;
-  width: 2.813rem;
-  height: 2.813rem;
-  border: solid 1px #e8e8e8;
-  border-radius: 50%;
-  background-color: var(--white);
-  cursor: pointer;
-}
-
-.user-icon {
-  margin: auto;
-  width: 1.68rem;
-  height: 1.68rem;
-  color: var(--azure);
 }
 
 .categorie {
@@ -389,6 +397,7 @@
 
 .current-chapter {
   padding: 0.5rem 0;
+  text-transform: uppercase;
 }
 
 .chapter {
